fix overflow issues on services page

--- a/services-page/services.css
+++ b/services-page/services.css
@@ -1,3 +1,6 @@
+main {
+    overflow-x: hidden;
+}
 
 h2 {
     margin-bottom: 2rem;
